# freeart

./: .gitignore  .gitingore  CMakeLists.txt  README.html  README.md  clab.cpp  client  client.cpp  fcp.h  labs  labs.cpp  main  main.cpp
apps/chat/: CMakeLists.txt  client.cpp  server_main.cpp
apps/chat/include/: chat_handler.h  fcp.h
apps/chat/src/: chat_handler.cpp  fcp.cpp
core/: CMakeLists.txt
core/include/freeart/: build_info.h  connection.h  ihandler.h  server_core.h  server_core.tpp  utils.h
core/src/: utils.cpp
examples/echo/: CMakeLists.txt  main.cpp
include/: build_info.h  fcp.h  server.h
src/: benchmark.cpp  fcp.cpp  main.cpp  server.cpp
